hphp/test/slow/sealed/sealed_classes11.php.expectf
Fatal error: Class SomeTrait2 may not inherit from sealed class (MyTrait) without being in the whitelist in %s/test/slow/sealed/sealed_classes11.inc on line 3
